--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^18",
     "react-dom": "^18"
   },
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
